--- a/package.json
+++ b/package.json
@@ -29,43 +29,43 @@
   "types": "lib/index.d.ts",
   "license": "Apache-2.0",
   "dependencies": {
-    "classnames": "^2.3.1",
-    "lodash": "^4.17.21",
-    "rc-dropdown": "^3.2.2",
-    "rc-menu": "^9.3.0",
+    "classnames": "^2.5.1",
+    "lodash-es": "^4.17.21",
+    "rc-dropdown": "^4.1.0",
+    "rc-menu": "^9.12.4",
     "rc-new-window": "^0.1.13",
-    "rc-tabs": "^11.10.5"
+    "rc-tabs": "^14.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.7",
-    "@babel/plugin-proposal-export-default-from": "^7.16.7",
-    "@babel/preset-env": "^7.16.8",
+    "@babel/core": "^7.23.7",
+    "@babel/plugin-proposal-export-default-from": "^7.23.3",
+    "@babel/preset-env": "^7.23.8",
     "@types/classnames": "^2.3.1",
-    "@types/hoist-non-react-statics": "^3.3.1",
-    "@types/lodash": "^4.14.178",
-    "@types/node": "^17.0.9",
-    "@types/prismjs": "^1.16.6",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
-    "@types/shelljs": "^0.8.11",
-    "less": "^4.1.2",
-    "parcel": "1.12.4",
-    "prismjs": "^1.26.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "shelljs": "^0.8.4",
-    "ts-node": "^10.4.0",
+    "@types/hoist-non-react-statics": "^3.3.5",
+    "@types/lodash-es": "^4.17.12",
+    "@types/node": "^20.11.0",
+    "@types/prismjs": "^1.26.3",
+    "@types/react": "^18.2.47",
+    "@types/react-dom": "^18.2.18",
+    "@types/shelljs": "^0.8.15",
+    "less": "^4.2.0",
+    "parcel": "2.11.0",
+    "prismjs": "^1.29.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "shelljs": "^0.8.5",
+    "ts-node": "^10.9.2",
     "tslint": "^6.1.3",
     "tslint-react": "^5.0.0",
-    "typedoc": "0.20.37",
-    "typescript": "4.2.4"
+    "typedoc": "0.25.7",
+    "typescript": "5.3.3"
   },
   "peerDependencies": {
-    "react": ">=15.0.0",
-    "react-dom": ">=15.0.0"
+    "react": ">=18.0.0",
+    "react-dom": ">=18.0.0"
   },
   "resolutions": {
-    "@babel/preset-env": "7.13.8"
+    "@babel/preset-env": "7.23.8"
   },
   "scripts": {
     "example": "parcel example/*.html --open --out-dir temp --no-source-maps --no-hmr",
