--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
   "types": "lib/index.d.ts",
   "license": "Apache-2.0",
   "dependencies": {
+    "bowser": "^2.11.0",
     "classnames": "^2.5.1",
     "lodash": "^4.17.21",
     "rc-dropdown": "^4.2.0",
     "rc-menu": "^9.13.0",
-    "rc-new-window": "^0.1.13",
     "rc-tabs": "^15.0.0"
   },
   "devDependencies": {
@@ -76,7 +76,7 @@
     "@babel/preset-env": "7.13.8"
   },
   "scripts": {
-    "example": "parcel example/*.html --open --out-dir temp --no-source-maps --no-hmr",
+    "example": "parcel example/*.html --out-dir temp --no-source-maps --no-hmr",
     "build-less": "lessc style/index-light.less dist/rc-dock.css & lessc style/index-dark.less dist/rc-dock-dark.css ",
     "build-doc": "typedoc",
     "build-www": "ts-node tool/build-www",
