--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "dependencies": {
     "classnames": "^2.5.1",
     "lodash": "^4.17.21",
-    "rc-dropdown": "~4.0.1",
+    "rc-dropdown": "4.2.0",
     "rc-menu": "~9.8.4",
     "rc-new-window": "^0.1.13",
     "rc-tabs": "~11.16.1",
