--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "classnames": "^2.5.1",
     "lodash": "^4.17.21",
     "rc-dropdown": "4.2.0",
-    "rc-menu": "~9.8.4",
+    "rc-menu": "9.15.1",
     "rc-new-window": "^0.1.13",
     "rc-tabs": "~11.16.1",
     "react": "^17.0.2",
