--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "rc-dropdown": "4.2.0",
     "rc-menu": "9.15.1",
     "rc-new-window": "^0.1.13",
-    "rc-tabs": "~11.16.1",
+    "rc-tabs": "15.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
